# Adverse-Events-Knowledge-Graph

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.shared  Dockerfile.stage  README.md  docker-compose.yml  main.py  pyproject.toml  workflow.md
.github/: copilot-instructions.md
.github/copilot-planning/: llm-layer-plan.md  milestones.md  stats.md  step-3++.md
data/: .gitkeep
data/graph/: graph.7z
docs/: ITERATIVE_REASONING_SUMMARY.md  compliance.md  data-sources.md  diagram-agent-control-flow.md  diagram-graph-schema.md  etl-guide.md  iterative-reasoning.md  iterative_reasoning.md  llm-setup.md  scoring-policy.md  setup.md  steps-1-2-3.md  tools-api.md
schemas/: graph.schema.json
scripts/: cleanup_string.py  compare_models.py  explore_combos.py  explore_db.py  explore_pathways.py  graph_stats.py  load_all.py  peek_openfda.py  query_iterative.py  query_kg.py  query_react.py  setup_llm.ps1  stage_build_graph.py  stage_download.py  stage_normalize.py  stage_verify.py  start_llm_servers.ps1  stress_test.py  test_llm.py  test_tools.py  test_tools_bio.py  verify_data.py  verify_schema.py
src/kg_ae/: __init__.py  cli.py  config.py
src/kg_ae/datasets/: __init__.py  base.py
src/kg_ae/datasets/bindingdb/: __init__.py  download.py  normalize.py  parse.py
src/kg_ae/datasets/chembl/: __init__.py  download.py  load.py  parse.py
src/kg_ae/datasets/clingen/: __init__.py  download.py  load.py  normalize.py  parse.py
src/kg_ae/datasets/ctd/: __init__.py  download.py  load.py  normalize.py  parse.py
src/kg_ae/datasets/drugcentral/: __init__.py  download.py  load.py  normalize.py  parse.py
src/kg_ae/datasets/faers/: __init__.py  download.py  load.py  normalize.py  (+1 more)
src/kg_ae/db/: __init__.py  connection.py  schema.py  schema.sql
src/kg_ae/etl/: __init__.py  aria2.py  logging.py  runner.py  stage.py
src/kg_ae/evidence/: __init__.py
src/kg_ae/graph/: __init__.py  build.py  store.py  validate.py
src/kg_ae/llm/: __init__.py  agent.py  client.py  config.py  evidence.py  executor.py  iterative_orchestrator.py  iterative_schemas.py  lc_tools.py  llm_client.py  orchestrator.py  prompts.py  react_executor.py  react_orchestrator.py  react_prompts.py  react_schemas.py  schemas.py
src/kg_ae/resolve/: __init__.py
src/kg_ae/tools/: __init__.py  adverse_events.py  evidence.py  mechanism.py  paths.py  resolve.py  subgraph.py
tests/: __init__.py  conftest.py  test_config.py  test_db_connection.py  test_ddi.py  test_tools.py
(+47 files in other folders)
