[project]
name = "kg-ae"
version = "0.1.0"
description = "Drug-Adverse Event Knowledge Graph: mechanistic pathway analysis for pharmacovigilance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.3.1",
    "typer>=0.21.1",
    "beautifulsoup4>=4.14.3",
    "networkx>=3.6.1",
    "ruff>=0.14.14",
    "langchain>=1.3.10",
    "langchain-openai>=1.3.2",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.6",
    "langchain-tavily>=0.2.18",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[project.scripts]
kg-ae = "kg_ae.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kg_ae"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:.*Pydantic V1 functionality isn't compatible with Python 3.14.*:UserWarning",
]
